syntax = "proto3";

package proto;

option go_package = "gque/proto";

message NoGqueRequestBody {
}


message SuccessResponse {
    string data = 1;
}

message QueueCreateRequest {
    string queueName = 1;
    int64 time = 2;
}

message BroadcastCreateRequest {
    string broadcastName = 1;
    repeated string queueNames = 2;
}

message PushMessageRequest {
    string queueName = 1;
    string message = 2;
}

message BroadcastMessageRequest {
    string broadcastName = 1;
    string message = 2;
}

service GqueService {
    rpc CreateQueue(QueueCreateRequest) returns (SuccessResponse);
    rpc CreateBroadcast(BroadcastCreateRequest) returns (SuccessResponse);

    rpc PushMessage(PushMessageRequest) returns (SuccessResponse);
    rpc BroadcastMessage(BroadcastMessageRequest) returns (SuccessResponse);
}